--- a/GameReader/app/src/main/res/layout/activity_main.xml
+++ b/GameReader/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,13 @@
 
 
 
-    <Button
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_games"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/game_Add_Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -17,7 +23,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.87"
+            app:layout_constraintVertical_bias="0.946"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
