--- a/GameReader/app/src/main/res/layout/game_list.xml
+++ b/GameReader/app/src/main/res/layout/game_list.xml
@@ -3,18 +3,54 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="48dp"
+              android:layout_height="wrap_content"
               tools:context="com.example.gamereader.view.MainActivity"
               android:orientation="vertical"
-              android:gravity="center"
-              android:padding="16dp">
 
-    <TextView
-            android:id="@+id/game_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:text="Name1 Surname 1"
-            android:gravity="center_vertical"
-    />
+             >
+
+    <LinearLayout android:orientation="horizontal"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content">
+        <TextView
+                android:id="@+id/game_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:text="Name1 Surname 1"
+                android:gravity="left"
+
+        />
+        <TextView
+                android:id="@+id/game_plateforme"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:text="Name1 Surname 1"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+        />
+        <TextView
+                android:id="@+id/game_genre"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:text="Name1 Surname 1"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+        />
+    </LinearLayout>
+
+    <LinearLayout android:orientation="horizontal"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content">
+        <TextView
+                android:id="@+id/game_description"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:text="Name1 Surname 1"
+                android:gravity="left"
+        />
+    </LinearLayout>
+
+
+
 
 </LinearLayout>
