--- a/GameReader/app/src/main/res/layout/activity_main.xml
+++ b/GameReader/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="view.MainActivity">
+        tools:context="view.MainActivity"
+        android:orientation="vertical">
+
+ <androidx.appcompat.widget.Toolbar
+         android:id="@+id/toolbar_Main"
+         android:background="@color/colorPrimary"
+         android:layout_width="match_parent"
+         android:layout_height="?attr/actionBarSize">
+
+ </androidx.appcompat.widget.Toolbar>
+
+   <FrameLayout
+       android:id="@+id/fragment_container"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"/>
 
 
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/my_recycler_games"
-            android:scrollbars="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/game_Add_Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ajouter un jeu "
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.87"
-            app:layout_constraintVertical_bias="0.946"/>
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
