--- a/GameReader/app/src/main/res/layout/game_list.xml
+++ b/GameReader/app/src/main/res/layout/game_list.xml
@@ -6,6 +6,7 @@
               android:layout_height="wrap_content"
               tools:context="com.example.gamereader.view.MainActivity"
               android:orientation="vertical"
+              android:paddingBottom="7dp"
 
              >
 
@@ -18,7 +19,8 @@
                 android:layout_height="match_parent"
                 tools:text="Name1 Surname 1"
                 android:gravity="left"
-
+                android:textSize="16dp"
+                android:textStyle="bold"
         />
         <TextView
                 android:id="@+id/game_plateforme"
@@ -38,17 +40,12 @@
         />
     </LinearLayout>
 
-    <LinearLayout android:orientation="horizontal"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content">
-        <TextView
-                android:id="@+id/game_description"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:text="Name1 Surname 1"
-                android:gravity="left"
-        />
-    </LinearLayout>
+
+    <FrameLayout
+            android:id="@+id/fragment_game_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
 
 
 
