--- a/GameReader/app/src/main/res/layout/activity_main.xml
+++ b/GameReader/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,10 @@
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
+    <FrameLayout
+            android:id="@+id/fragment_game_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 
 
