--- a/GameReader/app/src/main/res/layout/activity_main.xml
+++ b/GameReader/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,19 @@
         tools:context="view.MainActivity"
         android:orientation="vertical">
 
- <androidx.appcompat.widget.Toolbar
-         android:id="@+id/toolbar_Main"
-         android:background="@color/colorPrimary"
-         android:layout_width="match_parent"
-         android:layout_height="?attr/actionBarSize">
-
- </androidx.appcompat.widget.Toolbar>
-
-   <FrameLayout
-       android:id="@+id/fragment_container"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"/>
-    <FrameLayout
-            android:id="@+id/fragment_game_container"
+    <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
+         <androidx.appcompat.widget.Toolbar
+                 android:id="@+id/toolbar_Main"
+                 android:background="@color/colorPrimary"
+                 android:layout_width="match_parent"
+                 android:layout_height="?attr/actionBarSize">
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
 
+    <include layout="@layout/layout_fragments" />
 
 
 </LinearLayout>
