--- a/GameReader/app/src/main/res/layout/game_list.xml
+++ b/GameReader/app/src/main/res/layout/game_list.xml
@@ -1,48 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              tools:context="com.example.gamereader.view.MainActivity"
-              android:orientation="vertical"
-              android:paddingBottom="7dp"
 
-             >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout android:orientation="horizontal"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content">
-        <TextView
-                android:id="@+id/game_name"
+    <data>
+        <variable name="game"
+                  type="com.example.gamereader.model.Game"/>
+    </data>
+
+    <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp">
+
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:text="Name1 Surname 1"
-                android:gravity="left"
-                android:textSize="16dp"
-                android:textStyle="bold"
-        />
-        <TextView
-                android:id="@+id/game_plateforme"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:text="Name1 Surname 1"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-        />
-        <TextView
-                android:id="@+id/game_genre"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:text="Name1 Surname 1"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-        />
-    </LinearLayout>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="8dp">
 
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_game_fl"/>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingBottom="8dp">
 
-
-
-
-
-</LinearLayout>
+                <TextView
+                        android:id="@+id/game_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        tools:text="@{game.name}"
+                        android:gravity="left"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        android:layout_marginLeft="5dp"
+                />
+                <TextView
+                        android:id="@+id/game_plateforme"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@{game.storyline}"
+                        android:gravity="center_vertical"
+                        android:layout_marginLeft="5dp"
+                />
+                <TextView
+                        android:id="@+id/game_genre"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@{game.url}"
+                        android:gravity="center_vertical"
+                        android:layout_marginLeft="5dp"/>
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</layout>
