--- a/GameReader/app/src/main/res/layout/games_fragment_list.xml
+++ b/GameReader/app/src/main/res/layout/games_fragment_list.xml
@@ -32,7 +32,8 @@
                 android:id="@+id/game_Add_Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rechercher un jeu "
+                android:text="@string/rechercher_un_jeu"
+                android:src="@drawable/icon_add"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
