--- a/GameReader/app/src/main/res/layout/game_list_search.xml
+++ b/GameReader/app/src/main/res/layout/game_list_search.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-        <variable name="game"
-                  type="com.example.gamereader.model.Game"/>
-    </data>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -33,20 +28,19 @@
                         android:id="@+id/game_name"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        tools:text="@{game.name}"
                         android:gravity="left"
                         android:textSize="16dp"
                         android:textStyle="bold"
                         android:layout_marginLeft="5dp"
                 />
+
                 <TextView
-                        android:id="@+id/game_genre"
+                        android:id="@+id/game_url"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="@{game.url}"
                         android:gravity="center_vertical"
                         android:layout_marginLeft="5dp"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-</layout>
+</RelativeLayout>
